successfully created simple calculator

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                         <input readonly=readonly class="key number_key" type="button " value="1">
                         <input readonly=readonly class="key number_key" type="button " value="2 ">
                         <input readonly=readonly class="key number_key" type="button " value="3 ">
-                        <input readonly=readonly class="key cross_key" type="button " value="* ">
+                        <input readonly=readonly class="key cross_key" type="button " value="x">
                     </div>
                     <div class="input-group key_box ">
                         <input readonly=readonly class="key  number_key" type="button " value="0 ">
                         <input readonly=readonly class="key number_key" type="button " value=". ">
-                        <input readonly=readonly class="key divide_key" type="button " value="/ ">
+                        <input readonly=readonly class="key divided_key" type="button " value="/ ">
                         <input readonly=readonly class="key answer_key" type="button " value="=">
                     </div>
                 </div>
